--- a/src/app/componentes/tablero/tablero.component.html
+++ b/src/app/componentes/tablero/tablero.component.html
@@ -3,9 +3,11 @@
     style="height: 460px; width: 460;">
 <app-casilla *ngFor="let c of casillas" [casilla] = "c" ></app-casilla>
 
-<img src="https://assets.chess24.com/assets/7bd769e178450cc4d968a75890b87ed0/images/chess/themes/pieces/chess24/white/k.png" (click)="setJugador('white')">
-<img src="https://assets.chess24.com/assets/7bd769e178450cc4d968a75890b87ed0/images/chess/themes/pieces/chess24/black/k.png" (click)="setJugador('black')">
-
+<img src="https://assets.chess24.com/assets/7bd769e178450cc4d968a75890b87ed0/images/chess/themes/pieces/chess24/white/k.png" (click)="setColorJugador('white')">
+<img src="https://assets.chess24.com/assets/7bd769e178450cc4d968a75890b87ed0/images/chess/themes/pieces/chess24/black/k.png" (click)="setColorJugador('black')">
+<div>
+    {{turno}}
+</div>
 
 <!--<img *ngIf="jugador=='ninguno' || jugador=='white'" src="https://assets.chess24.com/assets/7bd769e178450cc4d968a75890b87ed0/images/chess/themes/pieces/chess24/white/k.png" (click)="setJugador('white')">
 <img *ngIf="jugador=='ninguno' || jugador=='black'" src="https://assets.chess24.com/assets/7bd769e178450cc4d968a75890b87ed0/images/chess/themes/pieces/chess24/black/k.png" (click)="setJugador('black')">
