--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">ChessApp</a>
+    <a class="navbar-brand" [routerLink]="['home']">ChessApp</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,11 +9,21 @@
           <a class="nav-link" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" [routerLink]="['home']">Play Game <span class="sr-only">(current)</span></a>
+            <a class="nav-link" [routerLink]="['/partida']">Crear Partida<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['home']">Games<span class="sr-only">(current)</span></a>
           </li>
+      </ul>
+
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{currentUser.nick}}</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Partidas</a>
+            <a class="dropdown-item" href="#">Perfil</a>
+          </div>
+        </li>
       </ul>
     </div>
   </nav>
