--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,3 +1,5 @@
+
+<div class="container m-20 "><br><br><br>
 <h2>Login</h2>
 <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
@@ -25,3 +27,4 @@
       <div >Nombre o contraseña incorrectos</div>
   </div>
 </form>
+</div>
