--- a/src/app/componentes/partida/partida.component.html
+++ b/src/app/componentes/partida/partida.component.html
@@ -1,4 +1,15 @@
+
 <app-navbar></app-navbar>
-<app-tablero></app-tablero>
-<app-lista-movimientos></app-lista-movimientos>
-<app-chat></app-chat>
+<br><br>
+<div class="flex-container">
+    <div>
+        <app-tablero></app-tablero>
+    </div>
+    <div >
+        <app-chat ></app-chat>
+    </div>
+</div>
+<div>
+    <app-marcador></app-marcador>
+</div>
+
