--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -20,8 +20,8 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{currentUser.nick}}</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Partidas</a>
             <a class="dropdown-item" href="#">Perfil</a>
+            <a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesión</a>
           </div>
         </li>
       </ul>
