--- a/src/app/componentes/partida/partida.component.html
+++ b/src/app/componentes/partida/partida.component.html
@@ -9,7 +9,12 @@
         <app-chat ></app-chat>
     </div>
 </div>
-<div>
-    <app-marcador></app-marcador>
+<div class="m-4 row justify-content-start">
+    <app-marcador class="col-6" 
+        [partida] = "servicioAjedrez.partida"
+        [colorJugador] = "servicioAjedrez.colorJugador"
+        >
+        
+    </app-marcador>
 </div>
 
