--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -12,7 +12,7 @@
             <a class="nav-link" [routerLink]="['/partida']">Crear Partida<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" [routerLink]="['home']">Games<span class="sr-only">(current)</span></a>
+            <a class="nav-link" [routerLink]="['/historial']">Partidas<span class="sr-only">(current)</span></a>
           </li>
       </ul>
 
