--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,5 @@
 html, body{
     min-width: 920px;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
