--- a/src/app/componentes/chat/chat.component.html
+++ b/src/app/componentes/chat/chat.component.html
@@ -1,8 +1,8 @@
-<div class="row" style="width: 40vw;">
-    <div style="overflow-y:scroll;width: 100%;height: 450px;">
+<div class="row" style="width: 180%;">
+    <div style="overflow-y:scroll;width: 100%;height: 530px;">
         <div *ngFor="let message of chat">
-            <div *ngIf="servicio.jugador?.nick == message.nick"><span  style="color:'blue'">{{message.nick}} :</span><span>{{message.message}} </span></div>
-            <div *ngIf="servicio.jugador?.nick != message.nick"><span  style="color:'brown'">{{message.nick}} :</span><span>{{message.message}} </span></div>
+            <div *ngIf="servicio.jugador?.nick == message.nick"><span  style="color:rgb(114, 219, 65);padding-left:1em">{{message.nick}} :</span><span style="color:'white'"> {{message.message}} </span></div>
+            <div *ngIf="servicio.jugador?.nick != message.nick"><span  style="color:rgb(192, 32, 86);padding-left:1em">{{message.nick}} :</span><span style="color:'white'"> {{message.message}} </span></div>
         </div>
     </div>
 </div>
