--- a/src/app/componentes/marcador/marcador.component.css
+++ b/src/app/componentes/marcador/marcador.component.css
@@ -16,6 +16,7 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 1;
+    font-weight: bold;
   }
   .item3{
     grid-column-start:  2;
