--- a/src/app/componentes/navbar/navbar.component.html
+++ b/src/app/componentes/navbar/navbar.component.html
@@ -5,13 +5,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive="active">
+        <li *ngIf ="servicio.currentUser.estado != 'inGame'" class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li *ngIf ="servicio.currentUser.estado != 'inGame'" class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['/partida']">Crear Partida<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item" routerLinkActive="active">
+          <li *ngIf ="servicio.currentUser.estado != 'inGame'" class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['/historial']">Partidas<span class="sr-only">(current)</span></a>
           </li>
       </ul>
@@ -20,7 +20,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{currentUser.nick}}</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Perfil</a>
+            
             <a class="dropdown-item" (click)="cerrarSesion()">Cerrar Sesión</a>
           </div>
         </li>
